arreglo de comentarios en una linea

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                         <a href="https://wa.me/2215724259" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                         <a target="_blank" href="./paginas/contacto.html"><i class="fa-regular fa-envelope"></i></a>  
                     </div>    
+                    <!-- logo desktop y tablet-->
                     <div class="logoHeader">
-                        <img class="scale-up-center" src="img/puropng3.png" alt="logo puro capricho">                    <!-- logo desktop y tablet-->
+                        <img class="scale-up-center" src="img/puropng3.png" alt="logo puro capricho">                     
                      </div>    
-                     <div class="logoHeaderMobile"> <p> <a href="./index.html">PURO CAPRICHO</a></p> </div>    <!-- logo mobile-->   
+                     <!-- logo mobile-->  
+                     <div class="logoHeaderMobile"> <p> <a href="./index.html">PURO CAPRICHO</a></p> </div>                     
                       <nav>                                                                              
                           <input type="checkbox" id="menuNavPhone">
                           <label class="menuNavPhoneLabel" for="menuNavPhone"><i class="fa-solid fa-bars"></i></label>  
@@ -46,8 +48,8 @@
            </header>       
             <main>
                 <div class="mainIndex">
-                    <div class="banner">                                
-          <!-- banner con slider fotos -->
+        <!-- banner con slider fotos -->
+                    <div class="banner">    
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,20 +86,23 @@
                         <div class="cat4"> <img src="./img/catlenceria.jpg" alt="categoria lenceria" ></div>
                         <div class="cat5"><img src="./img/catniños.jpg" alt="categoria niños" ></div>
                         <div class="cat6"><img src="./img/catsensual.jpg" alt="categoria casual" ></div>
-                   </div>                     
-                   <div class="atencionEnvios">                                                                               <!-- fotos de envio catalogo y contacto con sus links-->
+                   </div>        
+                   <!-- fotos de envio catalogo y contacto con sus links-->             
+                   <div class="atencionEnvios">                                                                              
                        <div class="envio"> <img src="./img/envio.jpg" alt="imagen envio"></div>
                        <div class="catalogo"><a href="./paginas/catalogo.html"><img src="./img/catalogo3.jpg" alt="imagen catalogo"></a></div>
                       <div class="atencion"><a href="./paginas/contacto.html"><img src="./img/atencion1.jpg" alt="imagen atencion"></a></div>                    
                    </div>
                </div>
             </main>
+            <!-- footer  -->
             <footer>
-                <div class="footerContenedorPhone">                       <!-- footer  -->
+                <div class="footerContenedorPhone">                      
                     <div class="footerContenedorPhoneInfo">
                        <div class="ayudarFot">
                             <p class="pDesk colorPhone">Estamos para ayudarte</p>
-                            <input type="checkbox" id="mostrarMenuAyudarte">                                              <!-- check usado para subir y bajar texto en mobile-->
+                             <!-- check usado para subir y bajar texto en mobile-->
+                            <input type="checkbox" id="mostrarMenuAyudarte">                                              
                             <label class="mostrarMenuAyudarteMod colorPhone" for="mostrarMenuAyudarte"><p>Estamos para ayudarte &nbsp; <i class="fa-solid fa-chevron-down"></i></p></label>
                             <div class="ayudarteUl">
                                 <ul>
