agregando # a los links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a target="_blank" href="https://www.facebook.com/purocapricholenceria1"> <i class="fa-brands fa-facebook-f"></i> </a>
                         <a target="_blank" href="https://instagram.com/purocapricholenceria?igshid=YmMyMTA2M2Y=">  <i class="fa-brands fa-instagram"></i></a>
                         <a href="https://wa.me/2215724259" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a target="_blank" href="./paginas/contacto.html"><i class="fa-regular fa-envelope"></i></a>  
+                        <a target="_blank" href="#"><i class="fa-regular fa-envelope"></i></a>  
                     </div>    
                     <!-- logo desktop y tablet-->
                     <div class="logoHeader">
@@ -38,10 +38,10 @@
                           <label class="menuNavPhoneLabel" for="menuNavPhone"><i class="fa-solid fa-bars"></i></label>  
                            <ul class="ulPrin">
                               <li><a href="./index.html">Inicio</a></li>                
-                              <li><a href="./paginas/nosotros.html">Nosotros</a></li>
-                              <li><a href="./paginas/catalogo.html">Catalogo 2022</a></li>
-                              <li><a href="./paginas/comocomprar.html">Como Comprar</a></li>
-                              <li><a href="./paginas/contacto.html">Contacto</a></li>
+                              <li><a href="#">Nosotros</a></li>
+                              <li><a href="#">Catalogo 2022</a></li>
+                              <li><a href="#">Como Comprar</a></li>
+                              <li><a href="#">Contacto</a></li>
                             </ul>    
                       </nav>                   
                 </div>         
@@ -90,8 +90,8 @@
                    <!-- fotos de envio catalogo y contacto con sus links-->             
                    <div class="atencionEnvios">                                                                              
                        <div class="envio"> <img src="./img/envio.jpg" alt="imagen envio"></div>
-                       <div class="catalogo"><a href="./paginas/catalogo.html"><img src="./img/catalogo3.jpg" alt="imagen catalogo"></a></div>
-                      <div class="atencion"><a href="./paginas/contacto.html"><img src="./img/atencion1.jpg" alt="imagen atencion"></a></div>                    
+                       <div class="catalogo"><a href="#"><img src="./img/catalogo3.jpg" alt="imagen catalogo"></a></div>
+                      <div class="atencion"><a href="#"><img src="./img/atencion1.jpg" alt="imagen atencion"></a></div>                    
                    </div>
                </div>
             </main>
@@ -117,9 +117,9 @@
                             <label class="mostrarMenuNosotrosMod colorPhone" for="mostrarMenuNosotros"><p>Sobre Nosotros &nbsp; <i class="fa-solid fa-chevron-down"></i></p></label>
                             <div class="NosotrosUl">
                                <ul>
-                                    <li><p> <a href="./paginas/nosotros.html">Nosotros</a></p></li>
-                                    <li><p> <a href="./paginas/preguntasfrecuentes.html">Preguntas Frecuentes</a> </p> </li>
-                                    <li><p> <a href="./paginas/comocomprar.html">Como comprar</a> </p></li>
+                                    <li><p> <a href="#">Nosotros</a></p></li>
+                                    <li><p> <a href="#">Preguntas Frecuentes</a> </p> </li>
+                                    <li><p> <a href="#">Como comprar</a> </p></li>
                                 </ul>
                             </div>
                         </div >  
@@ -129,7 +129,7 @@
                             <label class="mostrarMenuInformarMod colorPhone" for="mostrarMenuInformar"><p>Infomacion &nbsp; <i class="fa-solid fa-chevron-down"></i></p></label>
                             <div class="InformarUl">
                                 <ul>
-                                    <li> <p><a href="./paginas/catalogo.html">Catalogo</a></p> </li>                                                                         
+                                    <li> <p><a href="#">Catalogo</a></p> </li>                                                                         
                                 </ul>
                             </div>
                         </div>    
